--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ video::-webkit-media-controls-start-playback-button {
 }
 
 a {
-   font-size: 24px;
+   font-size: inherit;
    color: #1da1f2;
    display: inline
 }
@@ -66,3 +66,20 @@ a {
 #logo {
     margin-top: 4rem;
 }
+
+/*
+.color-box {
+    height: 18rem;
+    width: 18rem;
+    border-radius: 25px;
+    color: white;
+    background-color: black;
+    text-align: center;
+    padding-top: 6.5rem;
+    margin: 0 auto;
+    font-family: 'Product Sans';
+    font-size: 3rem;
+}
+margin shouldn't be auto.... hmm idk... should we do this in a single row
+without using collumns --> yea i think that is the best thing
+*/
