--- a/style.css
+++ b/style.css
@@ -16,9 +16,6 @@ canvas {
 * {
     -webkit-tap-highlight-color: transparent
 }
-video::-webkit-media-controls-start-playback-button {
-    display: none !important
-}
 
 a {
    font-size: inherit;
@@ -44,6 +41,7 @@ a.hover {
     color: #FFFFFF;
     letter-spacing: 3px;
     text-align: center;
+    text-decoration: none;
 }
 
 #main .content {
@@ -68,22 +66,30 @@ a.hover {
 }
 
 #logo {
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
-/*
+
 .color-box {
-    height: 18rem;
-    width: 18rem;
+    height: 100%;
+    width: 100%;
     border-radius: 25px;
     color: white;
-    background-color: black;
+    background-color: white;
     text-align: center;
-    padding-top: 6.5rem;
-    margin: 0 auto;
+    text-decoration: none;
     font-family: 'Product Sans';
     font-size: 3rem;
+    text-align: center;
+    vertical-align: middle;  
+    margin-top: 3rem;
 }
-margin shouldn't be auto.... hmm idk... should we do this in a single row
-without using collumns --> yea i think that is the best thing
-*/
+
+a {
+    border: none !important;
+    box-shadow: none !important;
+}
+
+a:hover {
+    text-decoration: none !important;
+}
